--- a/antsito.html
+++ b/antsito.html
@@ -48,7 +48,7 @@
 
       <h2 class="sottotitolo">La facciata</h2>
       <div id="divimmportalestemma">
-        <img id="immportalestemma" src="immagini/anna/tanta facciata ma non tutta.jpeg" alt="">
+        <img id="immportalestemma" src="tanta facciata ma non tutta.jpeg" alt="">
         <p class="didascalia">Portale</p>
       </div>
 
@@ -61,7 +61,7 @@
 
       <div class="pgfant">
         <div id="divimmpanoplia">
-          <img id="immpanoplia"src="immagini/anna/elemento statuario laterale.jpeg" alt="">
+          <img id="immpanoplia"src="elemento statuario laterale.jpeg" alt="">
           <p class="didascalia">Panoplia</p>
         </div>
 
@@ -72,7 +72,7 @@
 
       <h2 class="sottotitolo">Il giardino</h2>
       <div id="divimmgiardino">
-        <img id="immgiardino" src="immagini/anna/giardino interno.jpeg" alt="">
+        <img id="immgiardino" src="giardino interno.jpeg" alt="">
         <p class="didascalia">Giardino interno odierno</p>
       </div>
 
