--- a/commsito.html
+++ b/commsito.html
@@ -65,7 +65,7 @@
 
       <div class="pgfcom">
         <div id="corneliobdiv">
-          <img id="corneliobimm" src="immagini/corneliob.jpg" alt="">
+          <img id="corneliobimm" src="corneliob.jpg" alt="">
           <p class="didascalia">Ritratto di Cornelio Bentivoglio, Anonimo, Bologna</p>
 
         </div>
@@ -102,7 +102,7 @@
         reprimendo ogni moto sovversivo e sedando le rivolte dei soldati, e in quei momenti così difficili mantenne l'ordine e contribuì alla concordia dei cittadini.
       </p>
 
-      <img id="cartina2imm" src="immagini/cartina2.jpg" alt="">
+      <img id="cartina2imm" src="cartina2.jpg" alt="">
       <p class="didascalia" id="didscuola">cartina</p>
 
       <h2 class="sottotitolo">Altri episodi della vita di Cornelio</h2>
@@ -174,7 +174,7 @@
         </ul>
       </p>
 
-      <img id="alberogenimm" src="immagini/alberogen.jpg" alt="">
+      <img id="alberogenimm" src="alberogen.jpg" alt="">
       <p class="didascalia" id="didscuola">Albero genealogico della famiglia Bentivoglio</p>
 
       <h2 class="sottotitolo">Cornelio all'estero</h2>
@@ -193,12 +193,12 @@
       <div id="cestero">
 
         <div id="stampa">
-          <img id="stampaimm" src="immagini/stampa.jpg" alt="">
+          <img id="stampaimm" src="stampa.jpg" alt="">
           <p class="didascalia">Incisione di Cornelio Bentivoglio in età matura,<br>Gabinetto delle Stampe, Biblioteca Nazionale di Parigi</p>
         </div>
 
         <div id="cartina1">
-          <img id="cartina1imm" src="immagini/cartina1.jpg" alt="">
+          <img id="cartina1imm" src="cartina1.jpg" alt="">
           <p class="didascalia">cartina</p>
         </div>
       </div>
@@ -248,7 +248,7 @@
          nella chiesa ora distrutta di Santa Maria degli Angeli.
        </p>
 
-       <img id="medagliaimm" src="immagini/medaglia.jpg" alt="">
+       <img id="medagliaimm" src="medaglia.jpg" alt="">
        <p class="didascalia" id="didscuola">Cornelio Bentivoglio in giovane età,<br> medaglia di Pastorino Pastorini da Siena, Museo Civico di Bologna</p>
 
       <footer id="footer">
