--- a/commsito.html
+++ b/commsito.html
@@ -50,7 +50,7 @@
 
       <div class="pgfcom">
         <div id="stemmadiv">
-          <img id="stemmaimm" src="immagini/stemma.jpg" alt="">
+          <img id="stemmaimm" src="stemma.jpg" alt="">
           <p class="didascalia">Stemma della famiglia Bentivoglio</p>
         </div>
 
