--- a/destusosito.html
+++ b/destusosito.html
@@ -65,7 +65,7 @@
         Bentivoglio si pronunciò contrario alla realizzazione del progetto, come si può notare nella lettera sottostante, adducendo come motivazione il disturbo che il baccano dei bambini avrebbe provocato.
       </p>
 
-      <img id="immscuola" src="immagini/scuola.jpg" alt="">
+      <img id="immscuola" src="scuola.jpg" alt="">
       <p class="didascalia"id="didscuola">Lettera di Nicolò Bentivoglio al Marchese Rodolfo Varano.<br>Archivio Storico comunale di Ferrara, fascicolo: “Scuola elementare Fabbricati scolastici 69” </p>
 
       <h2 class="sottotitolo">Situazione tra Ottocento e Novecento</h2>
@@ -91,12 +91,12 @@
     <div id="uso1">
 
       <div id="piano-terra">
-        <img id="piano-terraimm" src="immagini/piano terra.jpg" alt="">
+        <img id="piano-terraimm" src="piano terra.jpg" alt="">
         <p class="didascalia">Piano terra</p>
       </div>
 
       <div id="primo-piano">
-        <img id="primo-pianoimm" src="immagini/1piano.jpg" alt="">
+        <img id="primo-pianoimm" src="1piano.jpg" alt="">
         <p class="didascalia">Primo piano</p>
       </div>
     </div>
@@ -104,12 +104,12 @@
 
     <div id="uso2">
       <div id="secondo-piano">
-        <img id="secondo-pianoimm"src="immagini/2piano.jpg" alt="">
+        <img id="secondo-pianoimm"src="2piano.jpg" alt="">
         <p class="didascalia">Secondo piano</p>
       </div>
 
       <div id="terzo-piano">
-        <img id="terzo-pianoimm"src="immagini/3piano.jpg" alt="">
+        <img id="terzo-pianoimm"src="3piano.jpg" alt="">
         <p class="didascalia">Terzo piano</p>
       </div>
     </div>
