--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
     <div class="row">
 
      <div class="divimm">
-       <img class="imm" src="immagini/alessio/portale1.jpeg" alt="">
+       <img class="imm" src="portale1.jpeg" alt="">
        <p class="didascalia">Portale</p>
      </div>
 
      <div class="divimm">
-       <img class="imm" src="immagini/anna/elemento statuario centrale.jpeg" alt="">
+       <img class="imm" src="elemento statuario centrale.jpeg" alt="">
        <p class="didascalia">Stemma fiancheggiato dalle personificazioni di Forza e Vittoria</p>
      </div>
 
      <div class="divimmf">
-       <img class="imm" src="immagini/ivan/panoplia2.jpeg" alt="">
+       <img class="imm" src="panoplia2.jpeg" alt="">
        <p class="didascalia">Panoplia</p>
      </div>
 
@@ -94,17 +94,17 @@
        <div class="row">
 
         <div class="divimm">
-          <img class="imm" src="immagini/alessio/panopliadettaglio.jpeg" alt="">
+          <img class="imm" src="panopliadettaglio.jpeg" alt="">
           <p class="didascalia">Dettaglio di una panoplia</p>
         </div>
 
         <div class="divimm">
-          <img class="imm" src="immagini/anna/portale e architrave.jpeg" alt="">
+          <img class="imm" src="portale e architrave.jpeg" alt="">
           <p class="didascalia">Dettaglio dell'architrave a doppie volute</p>
         </div>
 
         <div class="divimmf">
-          <img class="imm" src="immagini/alessio/targabonati.jpeg" alt="">
+          <img class="imm" src="targabonati.jpeg" alt="">
           <p class="didascalia">Targa commemorativa di Teodoro Bonati</p>
         </div>
 
@@ -127,17 +127,17 @@
        <div class="row">
 
         <div class="divimm">
-          <img class="imm" src="immagini/alessio/biciclette interno.jpeg" alt="">
+          <img class="imm" src="biciclette interno.jpeg" alt="">
           <p class="didascalia">Porticato interno</p>
         </div>
 
         <div class="divimm">
-          <img class="imm" src="immagini/anna/scala a lumaga interna.jpeg" alt="">
+          <img class="imm" src="scala a lumaga interna.jpeg" alt="">
           <p class="didascalia">Scala a chiocciola interna</p>
         </div>
 
         <div class="divimmf">
-          <img class="imm" src="immagini/alessio/scalainterna.jpeg" alt="">
+          <img class="imm" src="scalainterna.jpeg" alt="">
           <p class="didascalia">Scala a chiocciola interna</p>
         </div>
 
@@ -160,17 +160,17 @@
        <div class="row">
 
         <div class="divimm">
-          <img class="imm" src="immagini/anna/finestra con cartiglio sx.jpeg" alt="">
+          <img class="imm" src="finestra con cartiglio sx.jpeg" alt="">
           <p class="didascalia">Dettaglio di portale e finestra con cartiglio</p>
         </div>
 
         <div class="divimm">
-          <img class="imm" src="immagini/alessio/giardinointerno5.jpeg" alt="">
+          <img class="imm" src="giardinointerno5.jpeg" alt="">
           <p class="didascalia">Giardino interno</p>
         </div>
 
         <div class="divimmf">
-          <img class="imm" src="immagini/anna/tanta facciata ma non tutta.jpeg" alt="">
+          <img class="imm" src="tanta facciata ma non tutta.jpeg" alt="">
           <p class="didascalia">Porzione centrale della facciata</p>
         </div>
 
