--- a/inqsito.html
+++ b/inqsito.html
@@ -48,7 +48,7 @@
     <div class="pgfinq">
 
       <div id="immalfonsodiv">
-        <img id="immalfonso" src="immagini/image6.jpg" alt="">
+        <img id="immalfonso" src="image6.jpg" alt="">
         <p class="didascalia">Miniatura di Alberto V d’Este</p>
       </div>
 
@@ -59,7 +59,7 @@
 
       <h2 class="sottotitolo">Pellegrino Pasini</h2>
       <div id="immpasinidiv">
-        <img id="immpasini"src="immagini/image1.jpg" alt="">
+        <img id="immpasini"src="image1.jpg" alt="">
 
         <p class="didascalia">Miniatura di Pellegrino Pasini, autore ignoto</p>
 
@@ -82,7 +82,7 @@
       <div class="pgfinq">
 
         <div id="immgbentivogliodiv">
-          <img id="immgbentivoglio" src="immagini/image4.jpg" alt="">
+          <img id="immgbentivoglio" src="image4.jpg" alt="">
           <p class="didascalia">Ritratto del cardinale Guido Bentivoglio, Antoon van Dyck 1625, palazzo Pitti a Firenze</p>
         </div>
 
@@ -97,7 +97,7 @@
       <h2 class="sottotitolo">Cardinale Cornelio Bentivoglio</h2>
 
       <div id="immcbentivogliodiv">
-        <img id="immcbentivoglio"src="immagini/image2.png" alt="">
+        <img id="immcbentivoglio"src="image2.png" alt="">
 
         <p class="didascalia">Ritratto di Cornelio Bentivoglio, autore ignoto, ca 1720</p>
 
@@ -117,7 +117,7 @@
       <div class="pgfinq">
 
           <div id="immbonatidiv">
-          <img id="immbonati" src="immagini/image3.png" alt="">
+          <img id="immbonati" src="image3.png" alt="">
           <p class="didascalia">Ritratto di Teodoro Bonati, Ferdinando dalla Valle e Ignazio Dolcetti, incisore (post 1813 - ante 1847)</p>
           </div>
 
@@ -140,7 +140,7 @@
       <div class="pgfinq">
 
       <div id="immnapoleonediv">
-        <img id="immnapoleone"src="immagini/image5.jpg" alt="">
+        <img id="immnapoleone"src="image5.jpg" alt="">
 
         <p class="didascalia">Napoleone attraversa il passo del Gran San Bernardo, Jacques-Louis David, 1800</p>
 
