--- a/restsito.html
+++ b/restsito.html
@@ -54,7 +54,7 @@
       intonaco sul fondo del cartiglio e una sagramatura<a class="link" id="elem_1" href="#nota_1"><sup>1</sup></a> sottostante all’intonaco della facciata a sinistra del portale; richiede ulteriori indagini, in particolare stratigrafie<a class="link" id="elem_2" href="#nota_2"><sup>2</sup></a>, per determinare il tipo di pietra, la presenza di ossalati<a class="link" id="elem_3" href="#nota_3"><sup>3</sup></a>, l’utilizzo della scialbatura<a class="link" id="elem_4" href="#nota_4"><sup>4</sup></a> o della coloritura nelle aree del cornicione e dell’ovolo, l’effettiva presenza della sagramatura ipotizzata in certe aree.</p>
 
       <div id="divimmfoglia">
-        <img id="immfoglia" src="immagini/Campione-foglia-d'oro.png" alt="campione con foglia d'oro">
+        <img id="immfoglia" src="Campione-foglia-d'oro.png" alt="campione con foglia d'oro">
         <p class="didascalia">Stratigrafia di porzione della cornice dell'ultima finestra a destra presentante foglia d'oro</p>
       </div>
 
@@ -69,19 +69,19 @@
       </p>
 
       <div id="divimmstato">
-        <img id="immstato" src="immagini/stato facciata.png" alt="">
+        <img id="immstato" src="stato facciata.png" alt="">
         <p class="didascalia" id="didscuola">Foto dello stato della facciata prima del restauro</p>
       </div>
 
       <div id="rest1">
 
         <div id="cartiglio">
-          <img id="cartiglioimm" src="immagini/annerimenti cartiglio.png" alt="">
+          <img id="cartiglioimm" src="annerimenti cartiglio.png" alt="">
           <p class="didascalia">Annerimenti sul cartiglio di una delle finestre</p>
         </div>
 
         <div id="voluta">
-          <img id="volutaimm" src="immagini/annerimento voluta.png" alt="">
+          <img id="volutaimm" src="annerimento voluta.png" alt="">
           <p class="didascalia">Annerimenti sulla voluta sinistra sopra al portale e superficie sottostante danneggiata</p>
         </div>
       </div>
@@ -89,7 +89,7 @@
       <h2 class="sottotitolo">I lavori di restauro</h2>
 
       <div id="divimmrestauro">
-        <img id="immrestauro" src="immagini/portale restauro.png" alt="">
+        <img id="immrestauro" src="portale restauro.png" alt="">
         <p class="didascalia">Portale durante le operazioni di restauro</p>
       </div>
 
